# Tetris

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Constants.h  Grid.cpp  README.md  Tetris.cpp  Tetris.h  TetronimoFactory.h  Texture.cpp  Texture.h  main.cpp
cmake/: CompilerWarnings.cmake
include/engine/: BaseEngine.h  GameEngine.h  Texture.h
include/tetris/: Block.h  CollisionHandler.h  Constants.h  GameEngine.h  Grid.h  Tetris.h  TetronimoFactory.h
src/: Block.cpp  CollisionHandler.cpp  CollisionHandler.h  GameEngine.cpp  Grid.cpp  Tetris.cpp  Tetris.h  TetronimoFactory.cpp  Texture.cpp  main.cpp
src/engine/: BaseEngine.cpp  GameEngine.cpp  Texture.cpp
src/tetris/: CollisionHandler.cpp  Grid.cpp  Tetris.cpp  TetronimoFactory.cpp
tests/: CMakeLists.txt  test_block.cpp  test_collision_handler.cpp  test_grid.cpp  test_tetronimo_factory.cpp
